@@ -162,7 +162,7 @@ public class DocumentApiController {
       }
 
     } catch (Exception e) {
-      System.err.println("Error retrieving document " + id + ": " + e.getMessage());
+      logger.error("Error retrieving document {}: {}", id, e.getMessage(), e);
 
       ErrorResponse error = new ErrorResponse("Failed to retrieve document");
 
@@ -177,10 +177,8 @@ public class DocumentApiController {
   @GetMapping("/relationships/{documentId}")
   @ApiResponses({
       @ApiResponse(responseCode = "200",
-          content = @Content(
-              schema = @Schema(implementation = DocumentRelationshipInfoResponse.class)
-          )
-      ),
+          content = @Content(schema =
+          @Schema(implementation = DocumentRelationshipInfoResponse.class))),
       @ApiResponse(responseCode = "500",
           content = @Content(schema = @Schema(implementation = ErrorResponse.class)))
   })
@@ -202,7 +200,7 @@ public class DocumentApiController {
       return ResponseEntity.ok(response);
 
     } catch (Exception e) {
-      System.err.println("Error getting document relationships: " + e.getMessage());
+      logger.error("Error getting document relationships: {}", e.getMessage(), e);
 
       ErrorResponse error = new ErrorResponse("Failed to get document relationships");
 
@@ -237,7 +235,7 @@ public class DocumentApiController {
       }
 
     } catch (Exception e) {
-      System.err.println("Error retrieving summary for document " + id + ": " + e.getMessage());
+      logger.error("Error retrieving summary for document {}: {}", id, e.getMessage(), e);
 
       ErrorResponse error = new ErrorResponse("Failed to retrieve summary");
 
@@ -309,7 +307,7 @@ public class DocumentApiController {
 
     try {
       List<Document> documents;
-      if (filename == null || filename.trim().isEmpty()) {
+      if (filename == null || filename.isBlank()) {
         documents = documentService.getAllDocuments();
       } else {
         documents = documentService.getDocumentsByFilename(filename);
@@ -327,7 +325,7 @@ public class DocumentApiController {
       return ResponseEntity.ok(response);
 
     } catch (Exception e) {
-      System.err.println("Error retrieving documents: " + e.getMessage());
+      logger.error("Error retrieving documents: {}", e.getMessage(), e);
       ErrorResponse error = new ErrorResponse("Failed to retrieve documents");
       return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
     }
@@ -354,7 +352,9 @@ public class DocumentApiController {
     }
     documentService.deleteDocument(id);
 
-    return ResponseEntity.ok(Map.of("documentId", id, "message", "Document deleted successfully"));
+    return ResponseEntity.ok(
+        Map.of("documentId", id, "message", "Document deleted successfully")
+    );
   }
 
   /**
