@@ -10,6 +10,8 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -27,6 +29,8 @@ import org.springframework.web.multipart.MultipartFile;
  */
 @Service
 public class DocumentService {
+
+  private static final Logger logger = LoggerFactory.getLogger(DocumentService.class);
 
   private final DocumentRepository documentRepository;
   private final DocumentChunkRepository documentChunkRepository;
@@ -77,7 +81,7 @@ public class DocumentService {
    */
   @Transactional
   public Document processDocument(MultipartFile file) throws IOException {
-    System.out.println("Starting document processing for: " + file.getOriginalFilename());
+    logger.info("Starting document processing for: {}", file.getOriginalFilename());
 
     // Validate file
     if (file.isEmpty()) {
@@ -102,11 +106,11 @@ public class DocumentService {
 
     try {
       // Step 1: Extract text using Apache Tika
-      System.out.println("Step 1: Extracting text from document: " + document.getId());
+      logger.info("Step 1: Extracting text from document: {}", document.getId());
       String extractedText = textExtractionService.extractText(file);
 
-      if (extractedText == null || extractedText.trim().isEmpty()) {
-        throw new RuntimeException("No text could be extracted from the document");
+      if (extractedText == null || extractedText.isBlank()) {
+        throw new IllegalStateException("No text could be extracted from the document");
       }
 
       document.setExtractedText(extractedText);
@@ -114,45 +118,55 @@ public class DocumentService {
       document = documentRepository.save(document);
 
       // Step 2: Chunk the document (in memory only)
-      System.out.println("Step 2: Chunking document: " + document.getId());
+      logger.info("Step 2: Chunking document: {}", document.getId());
       List<DocumentChunk> chunks = chunkingService.chunkDocument(document);
 
       if (chunks.isEmpty()) {
-        throw new RuntimeException("No chunks could be created from the document");
+        throw new IllegalStateException("No chunks could be created from the document");
       }
 
       document.setProcessingStatus(Document.ProcessingStatus.CHUNKED);
       document = documentRepository.save(document);
 
       // Step 3: Generate embeddings for chunks
-      System.out.println("Step 3: Generating embeddings for " + chunks.size() + " chunks");
+      logger.info("Step 3: Generating embeddings for {} chunks", chunks.size());
       chunks = embeddingService.generateEmbeddings(chunks);
 
       document.setProcessingStatus(Document.ProcessingStatus.EMBEDDINGS_GENERATED);
       document = documentRepository.save(document);
 
       // Step 4: Generate summary (optional - can be implemented later)
-      System.out.println("Step 4: Generating summary for document: " + document.getId());
+      logger.info("Step 4: Generating summary for document: {}", document.getId());
       String summary = generateSummary(extractedText);
 
       // Step 5: Generate relationships between chunks
       List<DocumentRelationship> relationships = createRelationshipsForSourceChunks(chunks);
-      System.out.println("Created " + relationships.size() + " document relationships.");
+      logger.info("Created {} document relationships.", relationships.size());
 
       document.setSummary(summary);
       document.setProcessingStatus(Document.ProcessingStatus.COMPLETED);
       document = documentRepository.save(document);
 
-      System.out.println("Successfully processed document: " + document.getFilename() + " with "
-          + chunks.size() + " chunks");
+      logger.info("Successfully processed document: {} with {} chunks", document.getFilename(),
+          chunks.size());
       return document;
 
-    } catch (Exception e) {
-      System.err.println("Error processing document " + document.getId() + ": " + e.getMessage());
-      e.printStackTrace();
+    } catch (IllegalStateException | IllegalArgumentException e) {
+      logger.error("Error processing document {}: {}", document.getId(), e.getMessage(), e);
       document.setProcessingStatus(Document.ProcessingStatus.FAILED);
       documentRepository.save(document);
-      throw new RuntimeException("Document processing failed", e);
+      throw e;
+    } catch (IOException e) {
+      logger.error("IO error processing document {}: {}", document.getId(), e.getMessage(), e);
+      document.setProcessingStatus(Document.ProcessingStatus.FAILED);
+      documentRepository.save(document);
+      throw e;
+    } catch (Exception e) {
+      logger.error("Unexpected error processing document {}: {}", document.getId(),
+          e.getMessage(), e);
+      document.setProcessingStatus(Document.ProcessingStatus.FAILED);
+      documentRepository.save(document);
+      throw new IllegalStateException("Document processing failed", e);
     }
   }
 
@@ -207,7 +221,7 @@ public class DocumentService {
   public void deleteDocument(Long id) {
     Optional<Document> documentOpt = documentRepository.findById(id);
     if (documentOpt.isEmpty()) {
-      System.out.println("Document not found: " + id);
+      logger.warn("Document not found: {}", id);
       return;
     }
 
@@ -218,19 +232,19 @@ public class DocumentService {
     // This avoids loading entities with embeddings which can cause converter issues
     int relationshipsDeleted = documentRelationshipRepository.deleteByDocumentIdNative(id);
     if (relationshipsDeleted > 0) {
-      System.out.println("Deleted " + relationshipsDeleted + " relationships for document: " + id);
+      logger.info("Deleted {} relationships for document: {}", relationshipsDeleted, id);
     }
 
     // Step 2: Delete all chunks associated with this document using native query
     // This avoids loading entities with embeddings which can cause converter issues
     int chunksDeleted = documentChunkRepository.deleteByDocumentIdNative(id);
     if (chunksDeleted > 0) {
-      System.out.println("Deleted " + chunksDeleted + " chunks for document: " + id);
+      logger.info("Deleted {} chunks for document: {}", chunksDeleted, id);
     }
 
     // Step 3: Delete the document itself
     documentRepository.delete(document);
-    System.out.println("Deleted document: " + id);
+    logger.info("Deleted document: {}", id);
   }
 
   /**
@@ -293,7 +307,7 @@ public class DocumentService {
    *         unavailable.
    */
   private String generateSummary(String text) {
-    if (text == null || text.trim().isEmpty()) {
+    if (text == null || text.isBlank()) {
       return "No summary available";
     }
 
@@ -380,10 +394,10 @@ public class DocumentService {
         results.add(docRel);
       }
 
-      System.out.println("Successfully created document relationships.");
+      logger.info("Successfully created document relationships.");
       return results;
     } catch (Exception e) {
-      System.err.println("Could not create document relationships");
+      logger.error("Could not create document relationships", e);
       return new ArrayList<>();
     }
   }
